2001-08-11  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi, doc/install.texi: Add a copyright notice
	to the INSTALL file.

2001-08-11  Paul Eggert  <eggert@twinsun.com>

	* NEWS: The autoconf manual now is distributed under the terms
	of the GNU Free Documentation License.

	* doc/autoconf.texi: Switch from old style copyright notice to FDL.
	Add an appendix "Copying This Manual" for the FDL.

	* doc/fdl.texi: New file, from
	<http://www.gnu.org/licenses/fdl.texi>.

	* doc/Makefile.am (autoconf_TEXINFOS): Add fdl.texi.

2001-08-10  Paul Eggert  <eggert@twinsun.com>

	* AUTHORS, BUGS, ChangeLog, ChangeLog.0, ChangeLog.1,
	ChangeLog.2, GNUmakefile, Makefile.maint, NEWS, README,
	README-alpha, TODO, configure.ac, lib/autoconf/Makefile.am,
	m4/atconfig.m4, m4/init.m4, m4/m4.m4, m4/missing.m4,
	m4/sanity.m4, tests/README, tests/aclocal.m4,
	tests/atspecific.m4, tests/base.at, tests/compile.at,
	tests/foreign.at, tests/m4sh.at, tests/m4sugar.at,
	tests/semantics.at, tests/suite.at, tests/tools.at,
	tests/torture.at: Add copyright notice.

	* tests/mktests.sh: Update year in copyright notice.

2001-08-12  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/semantics.at (AC_C_BIGENDIAN): New test.

2001-08-11  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/autoconf/c.m4 (AC_C_BIGENDIAN): Handle ACTION-IF-TRUE,
	ACTION-IF-FALSE, and ACTION-IF-UNKNOWN.
	* doc/autoconf.texi (C Compiler Characteristics): Update
	documentation for AC_C_BIGENDIAN.

2001-08-11  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/autoconf/c.m4 (AC_C_BIGENDIAN): Guess endianness by grep'ing
	magic values from an object file when cross-compiling.
	Based on code by Guido Draheim <Guido.Draheim@gmx.de>.

2001-08-10  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (&handle_output): Don't use `grep' with side
	effects.
	Suggested by Russ Allbery.

2001-08-10  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>

	* lib/autoconf/general.m4 (_AC_OUTPUT_SUBDIRS): Propagate the